--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+
+
+.inputStyles {
+  @apply bg-transparent appearance-none border border-gray-300 dark:border-gray-800 rounded w-full py-2 px-3 text-gray-700 dark:text-gray-500 outline-none focus:ring-1 ring-blue-500 placeholder:text-gray-700 dark:placeholder:text-gray-500;
+}
+
+.labelStyles {
+  @apply block text-gray-700 dark:text-gray-400 text-sm md:text-base mb-2;
+}
